--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1308,10 +1308,10 @@
 /* FOOTER POLICY */
 
 .footer__policy{
-    border-top-width: 4px;
+    border-top-width: 1.5px;
     border-top-color: var(--primary-color);
     border-top-style: solid;
-    border-bottom-width: 4px;
+    border-bottom-width: 1.5px;
     border-bottom-color: var(--primary-color);
     border-bottom-style: solid;
     margin-left: 0;
@@ -1352,7 +1352,7 @@
 
 
 .footer__support{
-    border-top-width: 4px;
+    border-top-width: 1.5px;
     border-top-color: var(--primary-color);
     border-top-style: solid;
     display: flex;
@@ -1366,6 +1366,8 @@
 
 .footer__support__heading{
     color: rgba(0, 0, 0, 0.462);
+    user-select: none;
+    cursor: text;
 }
 
 .footer__support__items{
@@ -1374,3 +1376,12 @@
     margin-top: 10px;
 }
 
+
+
+/* ABOUT SHOPEE */
+
+.footer__support__about-shopee{
+    list-style: none;
+    padding-left:0;
+    margin-left: 30px;
+}
